<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MarkThisSpot</string>
    
    <!-- Menu items -->
    <string name="action_settings">Settings</string>
	<string name="mark_it">Mark this spot</string>
	
	<!-- Context menu items -->
	<string name="menu_delete">Delete</string>
	<string name="menu_cancel">Cancel</string>
	
	<!-- Mark spot UI -->
	<string name="spot_name">Name:</string>
	<string name="spot_type">Type:</string>
	<string name="spot_desc">Description:</string>
	<string name="spot_lat">Lat:</string>
	<string name="spot_lng">Lng:</string>
	<string name="check_latlng">Check</string>
	<string name="save_edit">Save</string>
	<string name="delete_edit">Delete</string>
	<string name="cancel_edit">Cancel</string>
			
    <string name="latlng">Latitude &amp; Longitude: </string>
    <string name="none"> -- None -- </string>
    <string name="get_location">Get Location</string>
    <string name="default_loc_name">New Location</string>
    
    <!-- Latitude, longitude format -->
    <string name="latitude_longitude">%1$.8f, %2$.8f</string>

    <!-- Location type -->
    <string name="loc_type">Type</string>
    <string name="loc_type_default">Landmark</string>
    <string-array name="loc_type_values">
	    <item>Activity</item>
	    <item>Attraction</item>
	    <item>Business</item>
	    <item>Cafe</item>
	    <item>Education</item>
	    <item>Landmark</item>
	    <item>Night Spot</item>
	    <item>Restaurant</item>
	    <item>Residence</item>
	    <item>Point of Interest</item>
	</string-array>
    
    <!-- Messages -->
    <string name="cannot_del_curr_loc">Cannot delete Current Location</string>
    <string name="connected">Client connected</string>
    <string name="connection_error_code_unknown">Unknown connection error code:  %1$d</string>
    <string name="connection_failed">Connection failed</string>
    <string name="disconnected">Client disconnected</string>
    <string name="illegal_argument_exception">
        Illegal arguments: Latitude %1$.8f Longitude %2$.8f
    </string>
    <string name="invalid_action">Invalid intent action %1$s</string>
    <string name="invalid_integer_id">Invalid integer request ID: %1$s</string>
    <string name="IO_Exception_getFromLocation">IO Exception in Geocoder.getFromLocation()</string>
    <string name="location_requested">Periodic updates requested</string>
    <string name="location_updated">Location updated</string>
    <string name="location_update_error">Location update failed</string>
    <string name="location_update_error_detail">
        Location update error. code %1$d message %2$s
    </string>
    <string name="location_update_missing_update">
        Location update error. No incoming location.
    </string>
    <string name="location_updates_stopped">Periodic updates stopped</string>
    <string name="log_new_location">New location: %1$s</string>
    <string name="no_address_found">No address found for location</string>
    <string name="no_connection">No connection: Cannot request location</string>
    <string name="no_geocoder_available">Cannot get address. No geocoder available.</string>
    <string name="no_location_available">Location not available</string>
    <string name="resolved">Error resolved. Please re-try operation.</string>
    <string name="no_resolution">Google Play services: unable to resolve connection error.</string>
    <string name="periodic_update_stop">Stopping periodic updates</string>
    <string name="play_services_available">Google Play services is available</string>
    <string name="request_location_updates_in_progress">
        Can\'t request location updates, previous request hasn\'t finished
    </string>
    <string name="unknown_activity_request_code">
        Received an unknown activity request code %1$d in onActivityResult.
    </string>
    
    <!-- Connection erros -->
    <string name="connection_error_code">Connection failure error code: %1$d</string>
    <string name="connection_error_disabled">Google Play services is disabled</string>
    <string name="connection_error_internal">An internal error occurred</string>
    <string name="connection_error_invalid">The version of Google Play services on this device is not authentic</string>
    <string name="connection_error_invalid_account">The specified account name is invalid</string>
    <string name="connection_error_license_check_failed">The app is not licensed to the user</string>
    <string name="connection_error_message">Connection failure error message: %1$s</string>
    <string name="connection_error_misconfigured">The application is misconfigured</string>
    <string name="connection_error_missing">Google Play services is missing</string>
    <string name="connection_error_needs_resolution">Additional resolution is required</string>
    <string name="connection_error_network">A network error occurred</string>
    <string name="connection_error_outdated">Google Play services is out of date</string>
    <string name="connection_error_sign_in_required">The user is not signed in</string>
    <string name="connection_error_unknown">An unknown error occurred</string>
    
</resources>
