<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <TextView 
	        android:text="@string/spot_name"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right" />
	    <EditText 
	        android:id="@+id/mark_name"
	        android:layout_weight="2"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:inputType="text" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <TextView 
	        android:text="@string/spot_type"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right" />
	    <Spinner 
    	    android:id="@+id/mark_type"
	        android:layout_weight="2"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
        
	    <TextView 
	        android:text="@string/spot_desc"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right" />
	    <EditText 
	        android:id="@+id/mark_desc"
	        android:layout_weight="2"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:inputType="text" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/latlng_override"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    
	    <TextView 
	        android:text="@string/spot_lat"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right" />
	    <EditText 
	        android:id="@+id/mark_lat"
	        android:layout_weight="2.5"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal|numberSigned" />"
	    <TextView 
	        android:text="@string/spot_lng"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_gravity="right" />
	    <EditText 
	        android:id="@+id/mark_lng"
	        android:layout_weight="2.5"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:inputType="numberDecimal|numberSigned" />
	    <Button 
	        android:id="@+id/check_latlng"
	        android:layout_weight="1.5"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/check_latlng" />
	</LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
	    <Button 
	        android:id="@+id/save_edit"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/save_edit"
	        style="@android:attr/buttonBarButtonStyle" />
	    <Button 
	        android:id="@+id/cancel_edit"
	        android:layout_weight="1"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/cancel_edit"
	        style="@android:attr/buttonBarButtonStyle" />
    </LinearLayout>
    
</LinearLayout>
